# org-web

./: .gitignore  README.org  flake.nix  main.py  pyproject.toml  python-libs.nix  utils.py  xmpp_bot.py
templates/: add_form.html  agenda.html  base.html  edit_form.html  index.html  login.html  org_view.html
